fix: [PL-42943]: fix collapsable in case of Oauth not enabled (#19101)
* fix: [PL-42943]: fix collapsable in case of Oauth not enabled

--- a/src/modules/27-platform/auth-settings/pages/Configuration/Configuration.module.scss
+++ b/src/modules/27-platform/auth-settings/pages/Configuration/Configuration.module.scss
@@ -47,3 +47,9 @@
     }
   }
 }
+
+.isCollapsed {
+  span {
+    display: none;
+  }
+}
